--- a/Runtime/Locales/fr-FR/credits.json
+++ b/Runtime/Locales/fr-FR/credits.json
@@ -1,3 +1,4 @@
 [
-    { "name":"Russian kid", "url":"https://github.com/Russiankids" }
+    { "name":"Azurian", "url":"https://github.com/clemtomera" },
+    { "name":"Dovahkick", "url":"https://github.com/Dovahkick" }
 ]
