--- a/Runtime/Locales/be-BY/credits.json
+++ b/Runtime/Locales/be-BY/credits.json
@@ -1,3 +1,3 @@
 [
-    { "name":"Azurian", "url":"https://github.com/clemtomera" }
+    { "name":"Russian kid", "url":"https://github.com/Russiankids" }
 ]
