--- a/Runtime/Locales/cs-CZ/strings.json
+++ b/Runtime/Locales/cs-CZ/strings.json
@@ -1,23 +1,23 @@
 {
-    "name": "English",
-    "gameVer": 5,
+    "name": "Čeština",
+    "gameVer": 4,
     "main": {
-        "bandage": "Dressing",
-        "bandagedsc": "A roll of dressing with a bandage, used to slow down bleeding, stabilize fractures and aid skin healing. Has no effect on muscle health.",
-        "rippeddressing": "Ripped dressing",
-        "rippeddressingdsc": "A small pile of ripped clothing. Can be used as a makeshift bandage for bleeding wounds.",
-        "rag": "Old rag",
-        "ragdsc": "A worn, crumpled up rag. Can be used as decent makeshift dressing.",
-        "analgesicgauze": "Medical gauze",
-        "analgesicgauzedsc": "Woven gauze made of cotton, containing analgesic drugs. Decent at slowing bleeding and reducing pain from injuries.",
-        "alginate": "Alginate dressing",
-        "alginatedsc": "Dressing derived from carbohydrate sources released by clinical bacterial species, in the same manner as biofilm formation. Slows bleeding, highly improves skin healing and counteracts infections",
-        "sterilizedbandage": "Sterilized dressing",
-        "sterilizedbandagedsc": "A roll of dressing with a bandage, used to slow down bleeding, stabilize fractures and aid skin healing. Counteracts infections. Has no effect on muscle health.",
-        "plasticbandage": "Plastic dressing",
-        "plasticbandagedsc": "A roll of specially synthesized tough material, made to efficiently cover wounds and stabilize fractures. Has no effect on muscle health.",
-        "adhesivebandage": "Adhesive bandages",
-        "adhesivebandagedsc": "A pack of small medical dressings, made to treat small injuries. Lowers bleeding.",
+        "bandage": "Obvaz",
+        "bandagedsc": "Role obvazu s bandáží, která se používá ke zpomalení krvácení, stabilizaci zlomenin a podpoře hojení kůže. Nemá žádný vliv na zdraví svalů.",
+        "rippeddressing": "Roztrhaný obvaz",
+        "rippeddressingdsc": "Malá hromádka roztrhaného oblečení. Lze použít jako provizorní obvaz na krvácející rány.",
+        "rag": "Starý hadr",
+        "ragdsc": "Opotřebovaný, zmačkaný hadr. Lze použít jako slušný provizorní obvaz.",
+        "analgesicgauze": "Lékařská gáza",
+        "analgesicgauzedsc": "Tkaná gáza z bavlny, obsahující analgetika. Dobře zpomaluje krvácení a zmírňuje bolest způsobenou zraněním.",
+        "alginate": "Alginátový obvaz",
+        "alginatedsc": "Obvaz odvozený z uhlohydrátových zdrojů uvolňovaných klinickými bakteriálními druhy, podobně jako při tvorbě biofilmu. Zpomaluje krvácení, výrazně zlepšuje hojení kůže a působí proti infekcím.",
+        "sterilizedbandage": "Sterilizovaný obvaz",
+        "sterilizedbandagedsc": "Role obvazu s bandáží, která se používá ke zpomalení krvácení, stabilizaci zlomenin a podpoře hojení kůže. Působí proti infekcím. Nemá žádný vliv na zdraví svalů.",
+        "plasticbandage": "Plastický obvaz",
+        "plasticbandagedsc": "Role speciálně vyrobeného odolného materiálu, určeného k účinnému zakrytí ran a stabilizaci zlomenin. Nemá žádný vliv na zdraví svalů.",
+        "adhesivebandage": "Lepicí obvazy",
+        "adhesivebandagedsc": "Balíček malých lékařských obvazů určených k ošetření drobných poranění. Snižuje krvácení.",
         "musharm": "Mush arm",
         "musharmdsc": "Inedible plant part, useful as a one-time makeshift bandage.",
         "paincream": "Relief cream bottle",
@@ -67,7 +67,7 @@
         "bloodsac": "Blood sac",
         "bloodsacdsc": "A small, fleshy sac with blood in it. Doesn't look too different from your blood. Can be eaten or injected.",
         "saline": "IV bag",
-        "salinedsc": "A 0.75L bag with a needle at the end, for injecting fluids intravenously.",
+        "salinedsc": "A 0.75L bag with needle at the end, for injecting fluids intravenously.",
         "ringersolution": "Small IV bag",
         "ringersolutiondsc": "A 0.7L bag with a needle at the end, for injecting fluids intravenously.",
         "bloodbaghuman": "Red blood bag",
@@ -409,7 +409,7 @@
         "mediumbattery": "Medium battery",
         "mediumbatterydsc": "A generic battery that can be inserted into various electronic devices. Stores twice as much as a small battery, but a third as much as a large one.",
         "largebattery": "Large battery",
-        "largebatterydsc": "A large industrial battery that can be inserted into certain electronic devices. Stores three times as much as a medium battery.",
+        "largebatterydsc": "A large industrial battery that can be inserted into certain electornic devices. Stores three times as much as a medium battery.",
         "pistol": "Pistol",
         "pistoldsc": "A basic, semi-automatic handgun. Uses small magazines loaded with 9mm rounds. Might jam when wet or low condition. Hold in your main hand to use and see controls.",
         "rifle": "Rifle",
@@ -848,7 +848,7 @@
         "overweight1dsc": "Try to lose a few kilos.",
         "overweight2dsc": "Unhealthily overweight, though you look about average compared to other species. Clumsier, you get tired quicker.",
         "overweight3dsc": "Dangerously wide and soft. Way clumsier and more prone to exhaustion.",
-        "overweight4dsc": "Life-threatening obesity. It's like you stuffed a bag of fur with pure fat and hunger. At high risk of heart failure.",
+        "overweight4dsc": "Life-threatingly obese. It's like you stuffed a bag of fur with pure fat and hunger. At high risk of heart failure.",
         "depression1dsc": "Starting to realize the gravity of your situation. Try to distract yourself.",
         "depression2dsc": "Lacking the motivation to go on, struggling with emotions. Things really aren't looking up. Find a way to distract yourself.",
         "depression3dsc": "Barely willing to do anything. Your mind, ravaged by desperation. Maybe it will all be over soon?",
@@ -1030,7 +1030,7 @@
         "cereal": "Cereal mix",
         "cerealdsc": "The world's greatest invention - milk and cereal. Very tasty and filling.",
         "coffee": "Coffee",
-        "coffeedsc": "Beverage brewed from roasted coffee beans. Tasty and stimulating, but rather toxic due to the caffeine content.",
+        "coffeedsc": "Beverage brewed from roasted coffee beans. Tasty and stimulating, but rather toxic due to the caffeine content",
         "groundwater": "Groundwater",
         "groundwaterdsc": "Slightly dirty groundwater. Mostly safe to drink, though slightly sickening.",
         "water": "Water",
